    (SCRAM-SHA-256).
  - Slightly reduced overhead.
  - Support IEEE binary float database-wireformat.
  - Prevent new queries from starting in the local_backend.

o Crypto.SCRAM

  New module to support SCRAM authentication.

o Thread.ResourceCount

  New module to allow threadsafe race-condition-free counting of resources.

o SSL.File

  Support query_fd() and set_buffer_mode() methods.

Bug fixes
---------

o Crypto.CCM

  Fixed initialization of the iv.

o Filesystem.Monitor

  - Fixed issue with next_poll being set to zero causing polling
    every second.

  - Fixed indexing the NULL value error when InotifyMonitor was used in
    combination with a filter_file() that doesn't accept everything.

o HTTPLoop:

  Fixed some potential race conditions.

o Image.Image

  - Improved argument checking in apply_curve().

    Non-integer array values lead to use of uninitialized curve values.

o Image.PVR

  Fixed size check for twiddled images.

o Protocols.HTTP

  Fixed incoming chunked transfers (timed async works now, chunk
  options are properly 'parsed').

o Protocols.LDAP

  Fixed race condition on initializing LDAPS.

o Search.Utils

  Updated debug string format.

o Sql.pgsql

  - Suppress spurious 'File not open' blurts on stderr when the
    connection is still pending and we inspect the connection object.

  - Signal EOF early before closing the SQL result portal and thoroughly
    cleanup bufcon/stashcount to prevent occasional deadlocks
    on asynchronous object destructions.

  - Suppress rare "access in destructed object" messages.

  - Rip out fundamentally flawed reconnect logic, made failures consistent.

  - Repair SSL connect logic.

  - Update documentation.

  - Repair fetch_row_array().

o Standards.IIM

  Disabled debug output for unknown segment markers.

Building & Tools
----------------

o Image.SVG

  Fall back to using the unprefixed pkg-config if the arch-prefixed
  doesn't exist.

o precompile
